<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailActivity"
    tools:context=".activity.DetailActivity">

    <ImageView
        android:id="@+id/ivHinhCT"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100sp"
        android:layout_marginLeft="95dp"
        android:scaleType="center"
        android:src="@drawable/ic_launcher_background" />

    <TextView
            android:id="@+id/TenspCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_sp"
            android:textSize="40sp"
             android:gravity="center"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="320sp"
            app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/Price_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_gia_45000"
        android:layout_marginTop="390sp"
        android:layout_marginLeft="130dp"
        android:textSize="25sp"
       />
    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="720sp"
        >

        <ImageView
            android:layout_width="39dp"
            android:layout_height="90dp"
            android:id="@+id/addpro"
            android:layout_marginLeft="15dp"
            android:src="@drawable/baseline_add_circle_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="70dp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/quantity"
            android:textSize="40dp"
            android:text="1"
            />
        <ImageView
            android:id="@+id/removepro"
            android:layout_width="39dp"
            android:layout_height="90dp"
            android:layout_marginLeft="120dp"
            android:src="@drawable/baseline_remove_circle_24" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/blue"
            android:layout_marginLeft="250dp"
            android:id="@+id/btnCart"
            />

    </RelativeLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/back"
    android:layout_marginTop="600sp"
    android:gravity="center"
    android:layout_marginLeft="170dp"
    android:textColor="@color/white"
    android:backgroundTint="@color/blue"
android:id="@+id/btnBack"
    />
</RelativeLayout>

